# flet-datatable2

./: .docstr.yaml  .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
changelog/: index.html
datacolumn2/: index.html
datarow2/: index.html
datatable2/: index.html
docs/: datacolumn2.md  datarow2.md  datatable2.md  index.md
docs/types/: datacolumn_size.md
examples/datatable2_example/: pyproject.toml
examples/datatable2_example/src/: data.py  example-1.py  example-2.py  example_2.py  main.py
examples/flet_datatable2_example/: pyproject.toml
examples/flet_datatable2_example/src/: main.py
license/: index.html
search/: search_index.json
src/flet_datatable2/: __init__.py  datacolumn2.py  datarow2.py  datatable2.py  types.py
src/flutter/flet_datatable2/: pubspec.yaml
src/flutter/flet_datatable2/lib/src/: datatable2.dart  extension.dart
tests/: pyproject.toml  sorting_test.py
types/datacolumn_size/: index.html
