[project]
name = "flet-datatable2"
version = "0.1.0"
description = "DataTable2 control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-datatable2"
Repository = "https://github.com/MyGithubAccount/flet-datatable2"
Issues = "https://github.com/MyGithubAccount/flet-datatable2/issues"

[tool.setuptools.package-data]
"flutter.flet_datatable2" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.uv.sources]
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }
flet-cli = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-cli", rev = "v1" }
flet-desktop = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-desktop", rev = "v1" }

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"