[project]
name = "flet-datatable2"
version = "0.2.0"
description = "An enhanced DataTable for Flet apps."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Flet contributors", email = "hello@flet.dev" }]
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://flet-dev.github.io/flet-datatable2"
Repository = "https://github.com/flet-dev/flet-datatable2"
Issues = "https://github.com/flet-dev/flet-datatable2/issues"

[tool.setuptools.package-data]
"flutter.flet_datatable2" = ["**/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocstrings-python-xref",
    "mike",
    "markdown>=3.6",
    "pymdown-extensions",
    "mkdocs-glightbox",
    "pygments>=2.16",
]

[tool.uv.sources]
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
