[project]
name = "flet-datatable2"
version = "0.2.0"
description = "DataTable2 control for Flet"
readme = "README.md"
authors = [{ name = "Flet contributors", email = "hello@flet.dev" }]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-datatable2"
Repository = "https://github.com/MyGithubAccount/flet-datatable2"
Issues = "https://github.com/MyGithubAccount/flet-datatable2/issues"

[tool.setuptools.package-data]
"flutter.flet_datatable2" = ["**/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocstrings-python-xref",
    "mike",
    "markdown>=3.6",
    "pymdown-extensions",
    "mkdocs-glightbox",
    "pygments>=2.16",
]

[tool.uv.sources]
# flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"