[project]
name = "flet-datatable2-example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet-datatable2",
  "flet",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flet-datatable2-example"

# company name to display in about app dialogs

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-datatable2 = "../.." # relative path
flet = "git+https://github.com/flet-dev/flet.git@v1"

[tool.uv]
dev-dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
]

[tool.uv.sources]
flet-datatable2 = { path = "../../", editable = true }
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }
flet-cli = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-cli", rev = "v1" }
flet-desktop = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-desktop", rev = "v1" }
